swim_client/src/configuration/tests/resources/invalid/unnamed-record-top.recon
{
    @downlink_connections {
        buffer_size: 2
    }
}